--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -2,4 +2,13 @@
     <div class="display-3 text-warning"><%= @store.title %></div>
     <hr class="my-4">
     <div class="lead"><%= @store.full_address %></div>
+    <div>
+      <iframe
+      width="100%"
+      height="100%"
+      frameborder="0" style="border:0"
+      src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB_gYap3s8PA9Ai4ZXzBXPmh6ZCC2BplG0
+      &q=<%= @store.full_address %>" allowfullscreen>
+    </iframe>
+    <br>
 </div>
